fix: Fix content align

--- a/src/component/Add/Add.css
+++ b/src/component/Add/Add.css
@@ -7,18 +7,26 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-#add-wrapper {
-  width: 600px;
+.add-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add {
+  width: 50vw;
   background-color: #FFFFFF;
   border-radius: 10px;
-  margin: 10% auto auto;
   padding: 1em;
 }
 
 .add-close {
   position: absolute;
   margin-top: 0;
-  margin-left: 570px;
+  margin-left: 48vw;
   color: rgba(0, 0, 0, 0.3);
 }
 
@@ -32,7 +40,7 @@
   border: none;
   border-bottom: 1px solid #000;
   width: 100%;
-  height: 60px;
+  height: 40px;
   margin-bottom: 10px;
   font-size: 1em;
   font-weight: bold;
@@ -40,7 +48,7 @@
 
 #add-form textarea {
   width: 100%;
-  height: 300px;
+  height: 200px;
   border: none;
   border-bottom: 1px solid #000;
   font-size: 1em;
@@ -52,7 +60,7 @@
   border: none;
   border-radius: 10px;
   width: 100%;
-  height: 50px;
+  height: 40px;
   font-size: 1em;
   font-weight: bold;
   color: rgba(0, 0, 0, 0.5);
@@ -60,7 +68,7 @@
 
 .btn-send {
   width: 100%;
-  height: 50px;
+  height: 40px;
   background-color: rgba(255, 160, 80, 0.5);
   margin-top: 10px;
 }
