--- a/src/component/Info/Info.css
+++ b/src/component/Info/Info.css
@@ -1,10 +1,18 @@
+.info-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .info {
   width: 600px;
   max-height: 400px;
   background-color: #FFFEFE;
   border-radius: 10px;
   padding: 1em;
-  margin: 15% auto auto;
 }
 
 .info-title {
