--- a/src/component/Login/Login.css
+++ b/src/component/Login/Login.css
@@ -1,8 +1,16 @@
-#login-wrapper {
+#login {
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.login-wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .login {
@@ -10,7 +18,6 @@
   border-radius: 10px;
   background-color: #FFF;
   padding: 2em;
-  margin: 15% auto auto;
 }
 
 #login-form {
