--- a/src/component/Register/Register.css
+++ b/src/component/Register/Register.css
@@ -1,8 +1,16 @@
-#register-wrapper {
+#register {
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.register-wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .register {
@@ -10,7 +18,6 @@
   border-radius: 10px;
   background-color: #FFF;
   padding: 2em;
-  margin: 10% auto auto;
 }
 
 #register-form {
